CTW: C2 compilation fails with "Live Node limit exceeded limit"

XMLWordPrintable

    • b30

        $ cd test/hotspot/jtreg/testlibrary/ctw
        $ make
        $ cd dist
        $ wget https://repo1.maven.org/maven2/org/bytedeco/javacpp/1.4/javacpp-1.4.jar
        $ ./ctw.sh javacpp-1.4.jar

        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/opto/node.cpp:84), pid=9842, tid=9889
        # assert(Compile::current()->live_nodes() < Compile::current()->max_node_limit()) failed: Live Node limit exceeded limit
        #
        # JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.shade.jdk-jdk)
        # Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.shade.jdk-jdk, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1215334] Node::verify_construction()+0x144

        Current CompileTask:
        C2: 18284 4552 !b 4 org.bytedeco.javacpp.Loader::findLibrary (1195 bytes)

        Stack: [0x00007f2516feb000,0x00007f25170ec000], sp=0x00007f25170e7430, free space=1009k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1215334] Node::verify_construction()+0x144
        V [libjvm.so+0x1216106] Node::Node(unsigned int)+0x56
        V [libjvm.so+0x557233] PhaseCFG::build_cfg()+0xc33
        V [libjvm.so+0x5579bc] PhaseCFG::PhaseCFG(Arena*, RootNode*, Matcher&)+0x51c
        V [libjvm.so+0x85ce98] Compile::Code_Gen()+0x238
        V [libjvm.so+0x863ddb] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xebb
        V [libjvm.so+0x6d58dc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xfc
        V [libjvm.so+0x86ef8b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x2db
        V [libjvm.so+0x86ffc8] CompileBroker::compiler_thread_loop()+0x538
        V [libjvm.so+0x166d706] JavaThread::thread_main_inner()+0x206
        V [libjvm.so+0x1672566] Thread::call_run()+0xf6

        Logs:
         https://cr.openjdk.java.net/~shade/8244724/hs_err_pid9842.log
         https://cr.openjdk.java.net/~shade/8244724/replay_pid9842.log

              Assignee:
              Christian Hagedorn
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: