8244724: CTW: C2 compilation fails with "Live Node limit exceeded limit"

Fix live limit assert in node construction to be ignored during code generation in Compile::Code_Gen().

Reviewed-by: kvn, neliasso